--- a/src/components/container/Container.css
+++ b/src/components/container/Container.css
@@ -1,12 +1,17 @@
-body {
-    background-image: url(../../assets/img/fondo.jpg);
+.video-background {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
     overflow: hidden;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    height: 100vh;
-    background-attachment: fixed;
+    z-index: -1;
+    /* Para que el video quede detrás del contenido principal */
 }
-.title{
-    color: white;
+
+video {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    /* Ajustar el tamaño del video para cubrir el contenedor */
 }
