--- a/src/components/container/Container.css
+++ b/src/components/container/Container.css
@@ -6,12 +6,11 @@
     height: 100%;
     overflow: hidden;
     z-index: -1;
-    /* Para que el video quede detrás del contenido principal */
 }
 
-video {
+.video {
     width: 100%;
     height: 100%;
     object-fit: cover;
-    /* Ajustar el tamaño del video para cubrir el contenedor */
+
 }
